typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:4:5
  |
4 |     [b]: 0,
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            62,
        ),
        hi: BytePos(
            68,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:5:5
  |
5 |     [true]: 1,
  |     ^^^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            78,
        ),
        hi: BytePos(
            82,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:6:5
  |
6 |     [[]]: 0,
  |     ^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            96,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:7:5
  |
7 |     [{}]: 0,
  |     ^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            106,
        ),
        hi: BytePos(
            117,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:8:5
  |
8 |     [undefined]: undefined,
  |     ^^^^^^^^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            135,
        ),
        hi: BytePos(
            141,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:9:5
  |
9 |     [null]: null
  |     ^^^^^^

